--- a/Bopapp/default.htm
+++ b/Bopapp/default.htm
@@ -3,10 +3,16 @@
 <head>
     <title></title>
     <meta charset="utf-8" />
+    <style type="text/css">
+        html, body {
+            overflow: hidden;
+            margin: auto;
+            height: 100%;
+            width: 100%;
+        }
+    </style>
 </head>
 <body style="font-family:'Segoe UI'">
-    <h1>Bopapp</h1>
-    <p>Bop test</p>
-    <p>^_^</p>
+    <iframe src='https://webchat.botframework.com/embed/ssdutbot?s=sh-iuCQmf_E.cwA.cgU.HWRR6DsOp9QczUOmrAiezidlr9ZNKzWgYgcLzWtFPsQ' height="600" width="100%"></iframe>
 </body>
 </html>
